--- a/contact.html
+++ b/contact.html
@@ -27,8 +27,8 @@
         </ul>
         <ul class="header-list-icon">
             <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+            <li><a href="https://github.com/Tushar07778"><i class="fa-brands fa-github"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/tushar-majumdar-67a363345/"><i class="fa-brands fa-linkedin-in"></i></a></li>
         </ul>
     </header>
     <div class="slide-menu" id="slide-menu">
@@ -62,8 +62,8 @@
                         <!-- <p>Available: Mon-Fri, 9AM-6PM</p> -->
                     </div>
                     <div class="social-links-contact">
-                        <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                        <a href="#" aria-label="GitHub"><i class="fab fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/tushar-majumdar-67a363345/" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://github.com/Tushar07778" aria-label="GitHub"><i class="fab fa-github"></i></a>
                         <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
                         <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                         <a href="#" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
