--- a/project.html
+++ b/project.html
@@ -27,8 +27,8 @@
         </ul>
         <ul class="header-list-icon">
             <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+            <li><a href="https://github.com/Tushar07778"><i class="fa-brands fa-github"></i></a></li>
+            <li><a href="ps://www.linkedin.com/in/tushar-majumdar-67a363345"><i class="fa-brands fa-linkedin-in"></i></a></li>
         </ul>
     </header>
 <div class="slide-menu" id="slide-menu">
@@ -54,7 +54,7 @@
                 <li><a href="#"><i class="fa-brands fa-php"></i> Php</a></li>
                 <li><a href="#"><i class="fa-brands fa-python"></i> Python</a></li>
                 <li><a href="#"><i class="fa-brands fa-figma"></i> Figma</a></li>
-                <li><a href="#"><i class="fa-brands fa-github"></i> Github</a></li>
+                <li><a href="https://github.com/Tushar07778"><i class="fa-brands fa-github"></i> Github</a></li>
                 <li><a href="#"><i class="fa-brands fa-wordpress"></i> Worpress</a></li>
             </ul>
         </div>
